# mac-disk-monitor

./: CHANGELOG.md  COPYING  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: basic.rs
src/: cli.rs  event.rs  lib.rs  main.rs  std.rs
tests/: dummy-disk-activity.sh  std-stream-events.rs
