[package]
name = "mac-disk-monitor"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Falcão <gabrielfalcao@protonmail.com>"]

[dependencies]
clap = { version = "2.33", features = ["wrap_help"] }
regex = "1.5.4"
thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
timeout-readwrite = "0.3.1"

[dev-dependencies]
speculate = "0.1"
k9 = "0.11.1"

[lib]
name = "mac_disk_monitor"
path = "src/lib.rs"


[[bin]]
name = "mac-disk-monitor"
path = "src/cli.rs"
bench = false
