[package]
name = "mac-disk-monitor"
version = "0.1.1"
edition = "2021"
authors = ["Gabriel Falcão <gabrielfalcao@protonmail.com>"]
categories = ["os::macos-apis", "parser-implementations", "parsing", "command-line-utilities", "concurrency"]
description = "Rust library and command-line tool to monitor disk activity on MacOS"
keywords = ["macos", "diskutil"]
license = "GPL-3.0"
repository = "https://github.com/gabrielfalcao/mac-disk-monitor/"
readme = "README.md"
homepage = "https://github.com/gabrielfalcao/mac-disk-monitor/"
documentation = "https://docs.rs/mac-disk-monitor"

[dependencies]
clap = { version = "2.33", features = ["wrap_help"] }
regex = "1.5.4"
thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
timeout-readwrite = "0.3.1"

chrono = {version = "0.4", features = ["serde"]}
chrono-humanize = "0.2.1"

ctrlc = "3.2.1"
[dev-dependencies]
speculate = "0.1"
k9 = "0.11.1"

[lib]
name = "mac_disk_monitor"
path = "src/lib.rs"


[[bin]]
name = "disk-events-json"
path = "src/cli.rs"
bench = false
